# SixTrack

./: .gitignore  CMakeLists.txt
source/: collimation.f90  geant4.f90  mod_particles.f90
source/g4collimation/: BDSSixtrackInterface.cc  CMakeLists.txt  lhccrystals.gmad
